[gd_scene load_steps=2 format=3 uid="uid://dhyyi853mkcb3"]

[ext_resource type="Script" uid="uid://dd0h8qfkn8vlw" path="res://Characters/Patron/patron_manager.gd" id="1_d3rpj"]

[node name="EnemyManager" type="Node2D"]
script = ExtResource("1_d3rpj")
spawn_time = 10

[node name="EnemyHolder" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
